<resources>
    <string name="app_name">Quick Dynalist</string>
    <string name="auth_start">Get token</string>
    <string name="auth_instructions">Quick Dynalist is a third party app to access your Dynalist account. It requires an api token to proceed. Please generate a token below and copy it here. The token will only be locally stored on this device.</string>
    <string name="token_hint">Token</string>
    <string name="auth_accept_token">Continue</string>
    <string name="token_invalid">Error: Token was invalid</string>
    <string name="content_hint">Item text</string>
    <string name="btn_add_item">Add item</string>
    <string name="add_item_success">Item added to inbox</string>
    <string name="add_item_with_location_success">Item added to %1$s</string>
    <string name="error_update_server">So sorry! Failed to inform the server about this recent change.</string>
    <string name="error_update_server_retry">Something went wrong with a recent change. Retrying…</string>
    <string name="process_text_action_name">Add To Inbox</string>
    <string name="bookmark_hint">Add the tag #quickdynalist or #inbox to items that should appear in this list.</string>
    <string name="open_large">Open in large window</string>
    <string name="item_date_hint">Date</string>
    <string name="item_time_hint">Time</string>
    <string name="item_notes_hint">Notes</string>
    <string name="discard_item">Discard</string>
    <string name="send_item">Send</string>
    <string name="item_contents_required">Item text is required</string>
    <string name="item_date_required">A date is required if time is specified</string>
    <string name="unset">Delete</string>
    <string name="dialog_title_error">Error</string>
    <string name="item_change_target_location">Change location</string>
    <string name="open_item_list">Open item list</string>
    <string name="open_in_dynalist">Open in dynalist</string>
    <string name="invalid_intent_error">Sorry. We can\'t add this item to your Dynalist.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Quick Dynalist</string>
    <string name="nav_header_subtitle">The quickest way to add your items.</string>
    <string name="nav_header_desc">Quick Dynalist Logo</string>
    <string name="advanced_item">Create advanced item</string>
    <string name="title_recent_list">Recent</string>
    <string name="title_bookmark_list">Your inboxes</string>
    <string name="dialog_ask_discard">Are you sure you want to discard this item?</string>
    <string name="open_quick_dialog">Quick Dialog</string>
    <string name="add_inbox">Add inbox …</string>
    <string name="action_sync">Sync</string>
    <string name="alert_sync_success">Sync successful</string>
    <string name="goto_parent">Go to parent item</string>
    <string name="title_documents_list">Your documents</string>
    <string name="btn_add_item_and_close"><![CDATA[Add & Close]]></string>
    <string name="action_share">Share</string>
    <string name="activity_shortcut">Quick Dynalist shortcut</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="discard">Discard</string>
    <string name="shortcut_name_hint">Shortcut name</string>
    <string name="shortcut_type_quick_dialog">Quick dialog</string>
    <string name="shortcut_type_quick_list">Quick list</string>
    <string name="shortcut_type_hint">Shortcut type</string>
    <string name="shortcut_icon_hint">Pick your icon</string>
    <string name="shortcut_location_hint">Shortcut location</string>
    <string name="placeholder_image">Image</string>
    <string name="error_invalid_shortcut">Error: Shortcut is invalid</string>
    <string name="action_show_details">Show item details</string>
    <string name="activity_details">Details</string>
    <string name="error_disabled_shortcut">This shortcut is no longer valid. Please create a new one.</string>
    <string name="alert_rate_limit_delay">Syncing takes a bit longer than usual. Dynalist\'s API slowed us down.</string>
    <string name="dropoff_parent">Move to parent</string>
    <string name="dropoff_duplicate">Duplicate</string>
    <string name="error_dropoff_no_parent">This is already the root item</string>
    <string name="delete_item_success">Item deleted</string>
    <string name="undo">Undo</string>
    <string name="action_menu">Menu</string>
    <string name="action_edit">Edit</string>
    <string name="action_show_image">Show image</string>
    <string name="title_edit">Edit item</string>
    <string name="toggle_checklist">Make checklist</string>
    <string name="toggle_show_checked_items">Show checked</string>
    <string name="error_image_loading">Image is still loading</string>
    <string name="appwidget_header">Quick Dynalist</string>
    <string name="activity_list_app_widget">List widget</string>
    <string name="create_list_app_widget">Create</string>
    <string name="send_logs">Send bug report</string>
    <string name="error_log_collection">Could not collect logs</string>
    <string name="title_social">Social</string>
    <string name="share_quickdynalist">Share Quick Dynalist</string>
    <string name="share_quickdynalist_text">Check out Quick Dynalist: https://play.google.com/store/apps/details?id=com.louiskirsch.quickdynalist</string>
    <string name="bug_report_email">bugs@louiskirsch.com</string>
    <string name="bug_report_subject">Bug report for Quick Dynalist %1$s</string>
    <string name="bug_report_intent_title">Send email…</string>
    <string name="rate_quickdynalist">Rate Quick Dynalist</string>
    <string name="action_sync_now">Sync now</string>
    <string name="action_sync_now_long_label">Sync Quick Dynalist</string>
    <string name="sync_started">Quick Dynalist is downloading remote changes</string>
    <string name="sync_in_progress">Sync in progress…</string>
    <string name="alert_sync_no_success">Sync failed</string>
    <string name="invalid_date">Invalid date</string>
    <string name="toggle_bookmark">Make inbox</string>
    <string name="create_widget">Create widget</string>
    <string name="error_create_widget_not_supported">Creating widgets has to be done on your homescreen. Long press the Quick Dynalist launcher icon.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="open_settings">Settings</string>
    <string name="pref_title_sync_mobile_data">Sync with mobile data</string>
    <string name="pref_description_sync_mobile_data">Download remote changes automatically even if no WiFi connection is available.</string>
    <string name="confirm_sync_mobile_data">Use mobile data</string>
    <string name="confirm_no_sync_mobile_data">Use WiFi only</string>
    <string name="dialog_title_image_setting">Can\'t access your images</string>
    <string name="dialog_message_image_setting">In order for Quick Dynalist to show your images you need to enable \'Allow others to access via link\' in your Dynalist upload settings.</string>
    <string name="pref_category_sync">Sync</string>
    <string name="pref_category_display">Display</string>
    <string name="pref_category_edit">Compose</string>
    <string name="pref_description_sync_automatic">Trigger downloading remote changes automatically whenever Quick Dynalist is opened. Recommended.</string>
    <string name="pref_title_sync_automatic">Auto sync</string>
    <string name="pref_title_sync_frequency">Sync interval in minutes</string>
    <string name="pref_title_display_children_count">Number of child items to preview</string>
    <string name="pref_description_display_children_count">Items are shown with the first %1$s children.</string>
    <string name="pref_description_display_children_count_none">Items are shown without a preview of their children.</string>
    <string name="pref_description_display_children_count_all">Items are shown with all their children as a preview.</string>
    <string name="pref_title_display_children_depth">Levels of child items to preview</string>
    <string name="pref_description_display_children_depth">Items are previewed with their %1$s.</string>
    <string name="pref_title_edit_detect_tags">Detect and highlight possible tags</string>
    <string name="pref_description_edit_detect_tags">Automatically detect words that match tag names while typing.</string>
    <string name="pref_title_edit_speech_auto_submit">Submit voice recording immediately</string>
    <string name="pref_description_edit_speech_auto_submit">Voice recordings are immediately added to your Dynalist instead of allowing further edits.</string>
    <string name="pref_title_display_theme">Theme</string>
    <string name="pref_description_display_theme">Switch between light and dark theme.</string>
    <string name="action_duplicate">Duplicate</string>
    <string name="action_move_to_inbox">Move to an inbox</string>
    <string name="action_move_to">Move to …</string>
    <string name="action_link_to">Link to …</string>
    <string name="action_change_date">Change date</string>
    <string name="action_add_date_yesterday">Yesterday</string>
    <string name="action_add_date_today">Today</string>
    <string name="action_add_date_tomorrow">Tomorrow</string>
    <string name="action_add_date_mod">Modification date</string>
    <string name="action_add_date_choose">Choose …</string>
    <string name="action_change_date_remove">Remove</string>
    <string name="move_item_success">Moved item</string>
    <string name="goto_move_location">Go to location</string>
    <string name="goto_location">Go to location</string>
    <string name="toggle_saved">Save filter</string>
    <string name="action_edit_filter">Edit filter</string>
    <string name="filter_name_generic">Filter</string>
    <string name="action_create_filter">Filter</string>
    <string name="action_apply_filter">Apply filter</string>
    <string name="filter_category_general">General</string>
    <string name="filter_name_hint">Filter name</string>
    <string name="filter_show_as_checklist">Show as checklist</string>
    <string name="filter_match_all">Match all conditions</string>
    <string name="filter_match_any">Match any condition</string>
    <string name="filter_category_date_filter">Date</string>
    <string name="filter_desc_date">Date</string>
    <string name="filter_desc_modified_date">Modified date</string>
    <string name="filter_category_tags">Tags</string>
    <string name="filter_category_location">Location</string>
    <string name="filter_category_item_properties">Properties</string>
    <string name="filter_contains_text_hint">Contains text</string>
    <string name="filter_is_completed_any">Off</string>
    <string name="filter_is_completed_false">Not checked</string>
    <string name="filter_is_completed_true">Checked</string>
    <string name="filter_has_image_any">Off</string>
    <string name="filter_has_image_false">No image</string>
    <string name="filter_has_image_true">Has image</string>
    <string name="filter_hide_if_parent_included">Exclude item if parent is included</string>
    <string name="filter_category_order">Sort order</string>
    <string name="filter_sort_order_manual">Default</string>
    <string name="filter_sort_order_date">By date</string>
    <string name="filter_sort_order_modified_date">By modified date</string>
    <string name="filter_date_today">Today</string>
    <string name="filter_tags_hint">Search for tags</string>
    <string name="action_change_color">Change color</string>
    <string name="selection_bold"><b>Bold</b></string>
    <string name="selection_italic"><i>Italic</i></string>
    <string name="selection_strikethrough"><strike>Strikethrough</strike></string>
    <string name="selection_code"><font fgcolor='#FFFF0000'>Code</font></string>
    <string name="selection_regular">Regular</string>
</resources>