<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_change_color"
        android:title="@string/action_change_color"
        android:icon="@drawable/ic_action_change_color"
        app:showAsAction="never" />

    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="never" />

    <item android:id="@+id/action_duplicate"
        android:title="@string/action_duplicate"
        android:icon="@drawable/ic_action_duplicate"
        app:showAsAction="never" />

    <item android:id="@+id/action_move_to_bookmark"
        android:title="@string/action_move_to_inbox"
        android:icon="@drawable/ic_action_move"
        app:showAsAction="never">
        <menu />
    </item>

    <item android:id="@+id/action_move_to"
        android:title="@string/action_move_to"
        android:icon="@drawable/ic_action_move"
        app:showAsAction="never" />

    <item android:id="@+id/action_link_to"
        android:title="@string/action_link_to"
        android:icon="@drawable/ic_action_link"
        app:showAsAction="never" />

    <item android:id="@+id/action_change_date"
        android:title="@string/action_change_date"
        android:icon="@drawable/ic_action_date"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_add_date_today"
                android:title="@string/action_add_date_today"
                app:showAsAction="never" />

            <item android:id="@+id/action_add_date_mod"
                android:title="@string/action_add_date_mod"
                app:showAsAction="never" />

            <item android:id="@+id/action_add_date_choose"
                android:title="@string/action_add_date_choose"
                app:showAsAction="never" />

            <item android:id="@+id/action_change_date_remove"
                android:title="@string/action_change_date_remove"
                app:showAsAction="never" />
        </menu>
    </item>

    <item android:id="@+id/action_show_details"
        android:title="@string/action_show_details"
        android:icon="@drawable/ic_action_details"
        app:showAsAction="never" />

</menu>