<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/action_sync_now"
        android:title="@string/action_sync_now"
        android:icon="@drawable/ic_action_sync" />

    <item android:id="@+id/open_quick_dialog"
        android:title="@string/open_quick_dialog"
        android:icon="@drawable/ic_action_quick_dialog" />

    <item
        android:id="@+id/submenu_bookmarks_list"
        android:title="@string/title_bookmark_list">
        <menu>
            <group android:checkableBehavior="single" android:id="@+id/group_bookmarks_list">
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/submenu_documents_list"
        android:title="@string/title_documents_list">
        <menu>
            <group android:checkableBehavior="single" android:id="@+id/group_documents_list">
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/submenu_social"
        android:title="@string/title_social">
        <menu>
            <item android:id="@+id/share_quickdynalist"
                android:title="@string/share_quickdynalist"
                android:icon="@drawable/ic_action_share_quickdynalist" />

            <item android:id="@+id/rate_quickdynalist"
                android:title="@string/rate_quickdynalist"
                android:icon="@drawable/ic_action_rate_quickdynalist" />

            <item android:id="@+id/send_bug_report"
                android:title="@string/send_logs"
                android:icon="@drawable/ic_action_send_bug_report" />
        </menu>
    </item>

</menu>
