<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:key="sync_category" app:title="@string/pref_category_sync">

        <SwitchPreference
            app:defaultValue="true"
            app:key="sync_automatic"
            app:summary="@string/pref_description_sync_automatic"
            app:disableDependentsState="false"
            app:title="@string/pref_title_sync_automatic" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="sync_mobile_data"
            app:dependency="sync_automatic"
            app:summary="@string/pref_description_sync_mobile_data"
            app:title="@string/pref_title_sync_mobile_data" />

    </PreferenceCategory>


</androidx.preference.PreferenceScreen>