<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/goto_parent"
        android:icon="@drawable/ic_action_goto_parent"
        android:title="@string/goto_parent"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_show_details"
        android:title="@string/action_show_details"
        app:showAsAction="never" />

    <item android:id="@+id/open_in_dynalist"
        android:icon="@drawable/ic_action_open_in_browser"
        android:title="@string/open_in_dynalist"
        app:showAsAction="never" />

    <item android:id="@+id/create_shortcut"
        android:icon="@drawable/ic_action_create_shortcut"
        android:title="@string/create_shortcut"
        app:showAsAction="never" />

</menu>