<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_edit_filter"
        android:icon="@drawable/ic_action_edit_filter"
        android:title="@string/action_edit_filter"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/create_shortcut"
        android:icon="@drawable/ic_action_create_shortcut"
        android:title="@string/create_shortcut"
        app:showAsAction="never" />

    <item android:id="@+id/create_widget"
        android:title="@string/create_widget"
        app:showAsAction="never" />

    <group android:checkableBehavior="all">
        <item android:id="@+id/toggle_saved"
            android:checkable="true"
            android:title="@string/toggle_saved"
            app:showAsAction="never" />

        <item android:id="@+id/toggle_checklist"
            android:checkable="true"
            android:title="@string/toggle_checklist"
            app:showAsAction="never" />

    </group>

</menu>